# sistemas-embarcados

./: .env.development  .gitignore  README.md  arduino.ino  docker-compose.yml  script.sh  test.py  test2.py
alertmanager/: config.yml
django/: .env.development  README.md  pyproject.toml
django/backend/: settings.py  urls.py
django/devops/: Dockerfile
django/turbidity/: apps.py  consumers.py  urls.py  views.py
rabbitmq/: rabbit.conf
rules/: prometheus.yml  rules.yml
